--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #14803d;
+    --text-color: #dde0e4;
+    --card-front-color: #368a56;
     --card-back-color: #00aff4;
 }
 
